update mobile version font size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,6 @@
     <div class="grid-container">
       {% include navbar.html %} {{ content }} {% include footer.html %}
     </div>
-    {% include mathjax.html %} {% include google_analytics.html %}
-    <script defer="defer" src="/js/navbar.js"></script>
+    {% include scripts.html %}
   </body>
 </html>
