--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,7 +1,7 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script
   async
-  src="https://www.googletagmanager.com/gtag/js?id=UA-219515569-1"
+  src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"
 ></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,5 +10,5 @@
   }
   gtag("js", new Date());
 
-  gtag("config", "UA-219515569-1");
+  gtag("config", "{{ site.google_analytics }}");
 </script>
