--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,24 +6,22 @@ layout: default
 <div
   class="banner"
   style="background-image: url('{{ page.background | relative_url }}'); background-size: cover; background-repeat: no-repeat; background-position: center;"
->
-  <div class="heading-container">
-    {% if page.title %}
-    <h1 class="page-heading">{{ page.title }}</h1>
-    {% endif %} {% if page.description %}
-    <h2 class="page-subheading">{{ page.description }}</h2>
-    {% endif %}
-  </div>
-</div>
+></div>
 {% else %}
-<div class="banner">
-  <div class="heading-container">
-    {% if page.title %}
-    <h1 class="page-heading">{{ page.title }}</h1>
-    {% endif %} {% if page.description %}
-    <h2 class="page-subheading">{{ page.description }}</h2>
-    {% endif %}
-  </div>
-</div>
+<div class="banner"></div>
 {% endif %}
+
+<div class="heading-container">
+  {% if page.title %}
+  <h1 class="page-heading">{{ page.title }}</h1>
+  {% endif %} {% if page.excerpt %}
+  <h2 class="page-subheading">{{ page.excerpt }}</h2>
+  {% endif %} {% if page.author and page.date %}
+  <p class="post-meta">
+    Posted by {{ page.author }} on {{ page.date | date: '%B %d, %Y' }} &middot;
+    {% include read_time.html content=page.content %}
+  </p>
+  {% endif %}
+</div>
+
 <div class="content-container">{{ content }}</div>
