--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,55 +1,21 @@
 ---
-layout: default
+layout: page
 comments: true
 mathjax: true
 ---
 
-{% if page.background %}
-<div
-  class="banner"
-  style="background-image: url('{{ page.background | relative_url }}'); background-size: cover; background-repeat: no-repeat; background-position: center;"
->
-  <div class="heading-container">
-    <h1 class="page-heading">{{ page.title }}</h1>
-    <h2 class="page-subheading">{{ page.excerpt }}</h2>
-    <p class="post-meta">
-      Posted by {% if page.author %} {{ page.author }} {% else %} {{ site.author
-      }} {% endif %} {% if page.date %} on {{ page.date | date: '%B %d, %Y' }}
-      {% endif %} &middot; {% include read_time.html content=page.content %}
-    </p>
-  </div>
+<div class="post-content">{{ content }}</div>
+<div class="row-container">
+  {% if page.previous.url %}
+  <a
+    href="{{ page.previous.url | relative_url }}"
+    class="blog-nav-btn float-left"
+    >&larr; Previous</a
+  >
+  {% endif %} {% if page.next.url %}
+  <a href="{{ page.next.url | relative_url }}" class="blog-nav-btn float-right"
+    >Next &rarr;</a
+  >
+  {% endif %}
 </div>
-{% else %}
-<div class="banner">
-  <div class="heading-container">
-    <h1 class="page-heading">{{ page.title }}</h1>
-    <h2 class="page-subheading">{{ page.excerpt }}</h2>
-    <p class="post-meta">
-      Posted by {% if page.author %} {{ page.author }} {% else %} {{ site.author
-      }} {% endif %} {% if page.date %} on {{ page.date | date: '%B %d, %Y' }}
-      {% endif %} &middot; {% include read_time.html content=page.content %}
-    </p>
-  </div>
-</div>
-{% endif %}
-
-<div class="content-container">
-  <div class="post-content">{{ content }}</div>
-  <div class="row-container">
-    {% if page.previous.url %}
-    <a
-      href="{{ page.previous.url | relative_url }}"
-      class="blog-nav-btn float-left"
-      >&larr; Previous</a
-    >
-    {% endif %} {% if page.next.url %}
-    <a
-      href="{{ page.next.url | relative_url }}"
-      class="blog-nav-btn float-right"
-      >Next &rarr;</a
-    >
-    {% endif %}
-  </div>
-  {%- include disqus.html -%}
-</div>
-<script defer="defer" src="/js/post.js"></script>
+{%- include disqus.html -%}
