--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ body {
 
 .menu-list li a {
   color: #fff;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
   margin: 0 1rem;
@@ -93,57 +93,18 @@ body {
   top: 1.5rem;
 }
 
-@media (max-width: 868px) {
-  body.noScroll {
-    overflow: hidden;
-  }
-
-  .menu-list {
-    position: fixed;
-    top: 0;
-    left: -100%;
-    height: 100vh;
-    width: 100%;
-    max-width: 400px;
-    background: #222;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    transition: all 0.3s ease;
-  }
-
-  .menu-list.active {
-    left: 0%;
-  }
-
-  .menu-list li a {
-    margin: 0;
-    font-size: 1.5rem;
-  }
-
-  .icon {
-    display: block;
-  }
-
-  .icon.display-none {
-    display: none;
-  }
-}
-
 /* Site banner */
 
 .banner {
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   background-color: #777;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
 }
 
 .heading-container {
-  margin: 24rem 8rem;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  margin: 24rem 1rem;
   text-align: center;
 }
 
@@ -347,7 +308,7 @@ body {
 }
 
 .post-content li {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 table {
@@ -360,4 +321,89 @@ table {
 .post-content th {
   padding: 0.5rem 1rem;
   border: 1px solid #000;
+}
+
+/* Mobile */
+
+@media (max-width: 1024px) {
+  .navbar {
+    padding: 1rem 2rem;
+  }
+
+  .navbar.sticky {
+    padding: 0.25rem 2rem;
+  }
+
+  .navbar a.logo {
+    font-size: 1.5rem;
+    margin-right: 1rem;
+  }
+
+  body.noScroll {
+    overflow: hidden;
+  }
+
+  .menu-list {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 100vh;
+    width: 100%;
+    max-width: 512px;
+    background: #222;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: all 0.3s ease;
+  }
+
+  .menu-list.active {
+    left: 0%;
+  }
+
+  .menu-list li a {
+    margin: 0;
+    font-size: 1.5rem;
+  }
+
+  .icon {
+    display: block;
+  }
+
+  .icon.display-none {
+    display: none;
+  }
+
+  .page-heading {
+    font-size: 2.5rem;
+  }
+
+  .page-subheading {
+    font-size: 2rem;
+  }
+
+  .post-title {
+    font-size: 2rem;
+  }
+
+  .post-subtitle {
+    font-size: 1.5rem;
+  }
+
+  .post-meta {
+    font-size: 1.2rem;
+  }
+
+  .post-content {
+    font-size: 1rem;
+    line-height: 1.2;
+  }
+
+  .blog-nav-btn {
+    font-size: 1.2rem;
+  }
+
+  .footer-text {
+    font-size: 1.2rem;
+  }
 }
