--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,10 +16,11 @@ layout: default
   <h1 class="page-heading">{{ page.title }}</h1>
   {% endif %} {% if page.excerpt %}
   <h2 class="page-subheading">{{ page.excerpt }}</h2>
-  {% endif %} {% if page.author and page.date %}
+  {% endif %} {% if page.author %}
   <p class="post-meta">
-    Posted by {{ page.author }} on {{ page.date | date: '%B %d, %Y' }} &middot;
-    {% include read_time.html content=page.content %}
+    Posted by {{ page.author }} {% if page.date %} on {{ page.date | date: '%B
+    %d, %Y' }} {% endif %} &middot; {% include read_time.html
+    content=page.content %}
   </p>
   {% endif %}
 </div>
