--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@
   text-decoration: none;
 }
 
+iframe {
+  border: none;
+  margin-bottom: 1rem;
+}
+
 a {
   color: #000;
 }
@@ -239,7 +244,7 @@ body {
 .post-content h3,
 .post-content h4,
 .post-content h5 {
-  margin: 0 0 2rem;
+  margin: 0 0 1rem;
 }
 
 .post-content p {
