--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<nav class="navbar">
   <a href="{{ '/' | relative_url }}" class="logo">{{ site.title | escape }}</a>
   <ul class="menu-list">
     <i class="fa fa-times icon cancel-btn"></i>
@@ -8,5 +8,5 @@
     <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
   </ul>
   <i class="fa fa-bars icon menu-btn"></i>
-</div>
-<div class="overlay hidden"></div>
+</nav>
+<div class="overlay"></div>
