--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,6 +6,8 @@
     <li><a href="{{ '/about' | relative_url }}">About</a></li>
     <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
     <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+    <li><a href="{{ '/notes' | relative_url }}">Notes</a></li>
+    <!--- <li><a href="{{ '/contact' | relative_url }}">Contact</a></li> --->
   </ul>
   <i class="fa fa-bars icon menu-btn"></i>
 </nav>
