--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,3 @@
 {% include mathjax.html %} {% include google_analytics.html %}
-<script defer="defer" src="/js/navbar.js"></script>
+<script defer="defer" src="/js/default.js"></script>
 <script defer="defer" src="/js/post.js"></script>
-<script defer="defer" src="https://smtpjs.com/v3/smtp.js"></script>
