--- a/templates/section-page.html
+++ b/templates/section-page.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% block body %}
 
+<a href="{{ get_url(path='@/blog/_index.md') | safe }}">Posts</a>
+
 <h1>{{ page.title }}</h1>
 
 <p>{{ page.date }}</p>
