--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>teyuanliu-zola</title>
+    <title>teyuanliu.github.io</title>
   </head>
+
   <body>
-    <div class="grid-container">{% block body %} {% endblock %}</div>
+    <div class="grid-container">
+      {% block body %} {% endblock body%}
+    </div>
   </body>
+
 </html>
